@@ -9,21 +9,20 @@ CLS
 
 :: LOCAL VARIABLES ....................................................
 
-SET JAVAFXDIR=/SOFT/copy/dev/java/javafx/lib
+
 SET SRCDIR=src
 SET BINDIR=bin
-SET BINOUT=game-javac.out
-SET BINERR=game-javac.err
+SET BINOUT=Main-javac.out
+SET BINERR=Main-javac.err
 SET JARNAME=Game.jar
-SET JAROUT=game-jar.out
-SET JARERR=game-jar.err
+SET JAROUT=Main-jar.out
+SET JARERR=-jar.err
 SET DOCDIR=doc
 SET DOCPACK=game
 SET DOCOUT=game-javadoc.out
 SET DOCERR=game-javadoc.err
-SET MAINCLASSSRC=src/game/GameBasic.java
-SET MAINCLASSBIN=game.GameBasic
-SET MODULELIST=javafx.controls,javafx.fxml
+SET MAINCLASSSRC=src/picross/Main.java
+SET MAINCLASSBIN=picross.Main
 
 @echo off
 
@@ -56,19 +55,15 @@ ECHO "                                                                     "
 
 
 ECHO "1. Compiling ......................"
-javac -Xlint -cp ".;%SRCDIR%;%JAVAFXDIR%/*" %MAINCLASSSRC% -d %BINDIR% > %BINOUT% 2> %BINERR%
+javac -Xlint -cp ".;%SRCDIR%/" %MAINCLASSSRC% -d %BINDIR% > %BINOUT% 2> %BINERR%
 
 ECHO "2. Creating Jar ..................."
 cd bin
 jar cvfe %JARNAME% %MAINCLASSBIN% . > %JAROUT% 2> %JARERR%
 
-ECHO "3. Creating Javadoc ..............."
-cd ..
-javadoc -cp ".;%BINDIR%;%JAVAFXDIR%" --module-path "%JAVAFXDIR%" --add-modules %MODULELIST% -d %DOCDIR% -sourcepath %SRCDIR% -subpackages %DOCPACK% > %DOCOUT% 2> %DOCERR%
-
 cd bin
 ECHO "4. Running Jar ...................."
-start java --module-path "%JAVAFXDIR%" --add-modules %MODULELIST% -jar %JARNAME%
+java -jar %JARNAME%
 cd ..
 
 ECHO "[END OF SCRIPT -------------------]"
